fixed z-index issue with date selector

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -62,6 +62,10 @@ label {
   width: 75px;
 }
 
+.input-prepend .add-on, .input-append .add-on {
+  z-index: 1;
+}
+
 form .input {
   margin-left: 90px;
 }
